home-cluster/media/notifarr/service/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: notifiarr-service
  namespace: home-samba
spec:
  selector:
    app: notifiarr
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5454
