home-cluster/media/notifarr/service/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: notifiarr
  namespace: home-media
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`notifiarr.local.solonsstuff.com`)
      kind: Rule
      services:
        - name: notifiarr-service
          port: 80
      middlewares:
        - name: default-headers
          namespace: traefik
  tls:
    secretName: local-solonsstuff-com-live-tls
